--- a/Vue2.0_3/mint-demo/package.json
+++ b/Vue2.0_3/mint-demo/package.json
@@ -4,7 +4,7 @@
   "author": "strive <itstrive@sina.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot --port 8085",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --port 8085",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
